[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["Nikos Filippakis <me@nfil.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "ray-tracer"
path = "main.rs"

[lib]
name = "tracer"
path = "lib.rs"