[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["Nikos Filippakis <me@nfil.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
futures = "0.3.5"

[[bin]]
name = "ray-tracer"
path = "main.rs"

[lib]
name = "tracer"
path = "lib.rs"
